fix padding issue for signup-top on smaller devices

--- a/loginForm/style.css
+++ b/loginForm/style.css
@@ -16,6 +16,8 @@
     --signup-mid: clamp(0.98rem, 0.2rem + 1vw, 1.05rem);
     --signup-bg-color: #ecedee;
     --signup-font-color: #000000be;
+    --signup-top-padding-1: min(7vh, 30%);
+    --signup-top-padding-2: 2vh;
     
 
     --input-padding: 0.9vh;
@@ -112,8 +114,8 @@ body {
 .signup-section
 
 .signup-top-screen {
-    padding-top: min(11vh, 30%);
-    padding-bottom: 3rem;
+    padding-top: var(--signup-top-padding-1);
+    padding-bottom: var(--signup-top-padding-2);
 }
 
 .coerce-container {
@@ -310,7 +312,7 @@ button[type="submit"]:disabled:hover {
 @media (min-width: 321px) and (max-width: 681px) {
     :root {
         --root-font-size: 14px;
-        --input-padding: 0.5vh;
+        --input-padding: 0.2vh;
         --box-shadow: 0px 5px 8px -7px #000;
         --signup-btn-submit: .5rem;
     }
@@ -338,7 +340,8 @@ button[type="submit"]:disabled:hover {
     :root {
         --input-margin: 3%;
         --em-one-color: #dfd9d9;
-
+        --signup-top-padding-2: 4vh;
+        --signup-top-padding-2: 2vh;
     }
     
     .logo-section {
